--- a/css.css
+++ b/css.css
@@ -9,9 +9,12 @@ body {
 }
 nav {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
-	min-height: 8px;
+    min-height: 8px;
+    left: 0;
+    right: 0;
+    border: 1px solid red;
 }
 .logo img{
     width: 110px;
@@ -56,9 +59,10 @@ nav {
 }
 
 .main-content {
-    width: 120vh;
+    width: 52vw;
     position: relative;
     top: 30%;
+    border: 1px solid red;
     left: 10%;
     transform: translate(10%,30%);
     /* padding-left: 18%; 
@@ -70,7 +74,7 @@ nav {
 .main-content h1 {
 	position:relative;
     color: rgb(166, 186, 206);
-    font-size: 70px;
+    font-size: 5vw;
 }
 .main-content span {
     color: cyan;
