--- a/responsive.css
+++ b/responsive.css
@@ -5,9 +5,10 @@
     }
     .main-content {
     	width: 90vh;
-    	left: 30px;
+        left: 30px;
+        top: 50%;
         line-height: 50px;
-   		/* transform: translate(-40vw, -10vw);*/
+   		transform: translate(5%, 50%);
     }
     .main-content h1 {
         font-size: 55px;
@@ -29,9 +30,12 @@
         padding: 10px 20px;
     }
     .Aboutsection {
-        width: 80vh;
+        width: 90vh;
         margin-left: -90px;
-        margin-top: 10%;
+        /* margin-top: 10%; */
+        top: 50%;
+        line-height: 50px;
+   		transform: translate(25%, 50%);
     }
     .Aboutsection h1 {
         color: rgb(247, 189, 247);
@@ -98,22 +102,24 @@
 	.nav-links{
 		position: absolute;
 		right: 0px;
-		height: 92vh;
-		top: 8vh;
+		height: 100%;
+		top: 0vh;
 		background-color: #1d1b38; 		/*#1d1b38*/
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		width: 100%;
+		width: 50%;
 		z-index: 1;
-		transform: translateX(100%);
-		transition: transform 0.5s ease-in;
+        /* transform: translateX(100%); */
+        opacity: 0;
+		transition: opacity 0.5s ease-in;
 	}
 	.nav-links li {
 		opacity: 0;
 	}
 	.burger {
-		display: block;
+        display: block;
+        z-index: 2;
 	}
 	.main-content {
     	width: 60vh;
@@ -170,9 +176,20 @@
         font-size: 10px; 
         text-align: center;
       }
+    .vert-line1 {
+        display: none;
+    }
+    .vert-line2{
+        display: none;
+    }
+    .left-social-icons{
+        display: none;
+    }
+    
 }
 .nav-active {
-	transform: translateX(0%);
+    /* transform: translateX(0%); */
+    opacity: 1;
 }
 
 @keyframes navLinkFade{
@@ -182,6 +199,6 @@
 	}
 	to {
 		opacity: 1;
-		transform: translateX(0px);
+		transform: translateX(10px);
 	}
 }
