--- a/responsive.css
+++ b/responsive.css
@@ -104,7 +104,7 @@
 		right: 0px;
 		height: 100%;
 		top: 0vh;
-		background-color: #1d1b38; 		/*#1d1b38*/
+		background-color: #4673ac; 		/*#1d1b38*/
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -168,7 +168,7 @@
     .Aboutsection .profile-pic{ 
         width: 180px;
         position: relative;
-        
+        margin-left: 5px;
     }
     .footer{
         width: 100%;
@@ -190,6 +190,7 @@
 .nav-active {
     /* transform: translateX(0%); */
     opacity: 1;
+    position: fixed;
 }
 
 @keyframes navLinkFade{
