--- a/css.css
+++ b/css.css
@@ -1,44 +1,74 @@
 body {
-    font-size: 25px;
+    font-size: 1.125rem;
     overflow-x: hidden;
-    background-color: #050a30;	/*#050a30*/
-    margin: 0px;
-    padding: 0px;
+    background-color: #1d1b38;	/*#050a30*/
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Varela', sans-serif;
 }
+
+.container {
+    max-width: 100%;
+    width: 100%;
+    margin: 0 auto;
+}
+li{
+    list-style-type: none;
+}
+a {
+	text-decoration: none;
+	font-size: 1rem;
+	padding: .5em;
+	letter-spacing: .1rem;
+	color: cyan;
+}
+a:hover{
+    background-color: rgb(17, 47, 80);   
+}
+h1 {
+    color: rgb(166, 186, 206);
+    font-size: 4.5em;
+    line-height: .8em;
+    margin: 0 0;
+}
+h5 {
+    color: cyan;
+    font-size: 1.2rem;
+}
+h2 {
+    color: darkcyan;
+    font-size: 4rem;
+    line-height: .8em;
+    margin: .5em 0;
+}
+p {
+    font-size: 1.1rem;
+    max-width: 100%;
+    line-height: 1.8rem;
+    color: rgb(153, 175, 252);
+}
 nav {
+    width: 100%;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
     min-height: 8px;
-    left: 0;
-    right: 0;
+
 }
-.logo img{
-    width: 110px;
+nav h1 {
+    font-size: 1.8rem;
+    margin: 0 1em;
+    font-family: 'Moon 2.0', sans-serif;
 }
 .nav-links {
 	display: flex;
-	justify-content: space-around;
-	width: 30%;
+    justify-content: space-evenly;
+	width: 50%;
     color: whitesmoke;
     font-family: 'Century Gothic', sans-serif;
 }
-.nav-links li {
-    display: flex;
-    list-style-type: none;
-}
-.nav-links a {
-	text-decoration: none;
-	font-size: 15px;
-	padding: 5px;
-	letter-spacing: 2px;
-	color: cyan;
-}
-.nav-links a:hover{
-    background-color: rgb(17, 47, 80);   
-}
+
 .burger{
 	display: none;
 	cursor: pointer;
@@ -52,91 +82,87 @@ nav {
 	transition: all 0.3s ease;
 }
 .resume-btn {
-	padding: 5px;
+	padding: .5em;
     border: 1px solid whitesmoke;
-    border-radius: 2%;
+    border-radius: .5em;
 }
 
-.main-content {
-    width: 52vw;
-    position: relative;
-    top: 30%;
-    left: 10%;
-    transform: translate(10%,30%);
-    /* padding-left: 18%; 
-    padding-top:5%;     */
-    line-height: 35px; 
+/* Main content-1 
+#################################################################################
+*/
+
+.column-1 {
+    width: 70%;
+    margin: 1.5em auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    line-height: .5em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-.main-content h1 {
-	position:relative;
-    color: rgb(166, 186, 206);
-    font-size: 5vw;
-}
-.main-content span {
-    color: cyan;
-    position: relative;
-    font-size: 16px;
-    
-}
-.main-content h2 {
-    color: darkcyan;
-    position: relative;
-    font-size: 60px;
-    
-}
-.main-content p {
-    font-size: 18px;
-    position: relative;
-    color: #0f989d;
-    line-height: 28px;
-    color: rgb(153, 175, 252);
-    margin-bottom: 4%;
+.column-1 p {
+    width: 50%;
 }
 .get-in-touch {
-    border: 1px solid cyan;
-   	position: relative;
-    font-size: 17px;
-    padding: 15px 25px;
+    border: .1em solid cyan;
+    font-size: .8rem;
+    padding: 1em 1.5em;
     text-decoration: none;
     color: whitesmoke;
-    transform: background-color 0.2s;
 }
 .get-in-touch:hover {
-    transition: linear 0.3s;
     background-color: rgba(78, 76, 73, 0.144);
     box-shadow: 1px 1px 6px black;
 }
 
-.Aboutsection {
-    font-size: 15px;
-    width: 120vh;
-    left: 12%;
-    transform: translate(30%,50%);
-    margin-top: 20%;
+/* ################################################################################# */
+
+/* About section */
+
+.column-2 {
+    width: 70%;
+    display: flex;
+    line-height: .5em;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 20em auto;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.Aboutsection h1 {
-    color: rgb(247, 189, 247);
-    margin-bottom: 40px;
+
+.column-2 h1 {
+    font-size: 2rem;
+    margin-bottom: 2em;
 }
-.Aboutsection p {
-    color: steelblue;
-    line-height: 1.5vw;
-    font-weight: 150px;
-    word-spacing: 0.1vw;
+
+.col-1 {
+    width: 50%;
 }
-.Aboutsection .languages {
-    color: darkcyan;
-    padding: 1vw;
-    line-height: 1.5vw;    
+.col-1 ul{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    color: whitesmoke;
 }
-.Aboutsection .profile-pic{ 
-    float: right;
-    width: 18vw;
-    margin-right: 20px;
-    
+.col-1 li {
+    padding: .6em;
+    list-style-image: url("https://img.icons8.com/material-rounded/24/000000/rhombus.png");
 }
+.col-2 {
+    width: 40%;
+    margin-top: 3em;
+}
+.col-2 img {
+    width: 100%;
+    opacity: 0.5;
+}
+.col-2 img:hover {
+    opacity: 1;
+    box-shadow: .5em .5em 1.2em rgb(218, 97, 66);
+    transition: all 0.2s ease-in;
+}
+
+/* ######################################################################################### */
+
 .footer{
     width: 100%;
     color: whitesmoke;
@@ -150,16 +176,46 @@ nav {
 .toggle .line1{
 	transform: rotate(-45deg) translate(-5px,6px);
 }
-
 .toggle .line2{
 	opacity: 0;
 }
-
 .toggle .line3{
 	transform: rotate(45deg) translate(-5px,-6px);
 }
 
-
+.vertical-lines {
+    display: flex;
+    justify-content: space-between;
+}
+.row1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.vert-line1 {
+    width: 2px;
+    background-color: red;
+    height: 100px;
+}
+.row2 {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    margin-right: 50px;
+}
+.vert-line2 {
+    height: 120px;
+    width: 2px;
+    background-color: red;
+}
+.row2 a {
+    text-decoration: none;
+    color: darkcyan;
+    transition: all 0.3s ease;
+    font-size: 1vw;
+    writing-mode: vertical-lr;
+}
+/* 
 .vert-line1{
     height: 100px;
     background-color: rgb(174, 187, 245);
@@ -167,7 +223,7 @@ nav {
     position: fixed;
     bottom: 0vw;
     left: 4vw;
-    /* transform: translate(-50%, -50%); */
+    transform: translate(-50%, -50%);
 }
 .vert-line2{
     height: 100px;
@@ -189,16 +245,12 @@ nav {
 }
 
 .right-email a{
-    text-decoration: none;
-    color: darkcyan;
-    transition: all 0.3s ease;
-    font-size: 1vw;
-    writing-mode: vertical-lr;
+
 }
 .right-email a:hover{
     bottom: 13.5vw;
     color: whitesmoke;
-}
+} */
 .left-social-icons{
     width: 1vw;
     position: fixed;
