--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
 	.nav-links{
 		width: 50%;
 		padding-right: 60px;
@@ -32,7 +32,7 @@
     .Aboutsection {
         width: 90vh;
         margin-left: -90px;
-        /* margin-top: 10%; */
+        margin-top: 10%;
         top: 30%;
         line-height: 50px;
    		transform: translate(30%, 30%);
@@ -67,7 +67,7 @@
         left: 20px;
         position: relative;
         line-height: 50px;
-   		/* transform: translate(-40vw, -10vw);*/
+   		transform: translate(-40vw, -10vw);
     }	
     .Aboutsection {
         width: 90vh;
@@ -93,12 +93,8 @@
         position: relative;
         
     }
-}
+} */
 @media screen and (max-width: 600px) {
-    * {
-        margin: 0px;
-        padding: 0px;
-    }
 	.nav-links{
 		position: absolute;
 		right: 0px;
@@ -120,57 +116,51 @@
 	.burger {
         display: block;
         z-index: 2;
-	}
-	.main-content {
-    	width: 60vh;
-    	left: 0px;
-        line-height: 50px;
+    }
+    
+    /* ############################################################## */
+	.column-1 {
+        width: 80%;
    		/* transform: translate(-40vw, -10vw);*/
     }
-    .main-content h1 {
-        font-size: 45px;
+    .column-1 h1 {
+        font-size: 3em;
+        line-height: 1em;
     }
-    .main-content span {
-        font-size: 12px;
+    .column-1 h5 {
+        font-size: .8em;
         
     }
-    .main-content h2 {
-        font-size: 35px;
+    .column-1 h2 {
+        font-size: 2.5em;
+        line-height: 1em;
     }
-    .main-content p {
-        font-size: 14px;
-        line-height: 25px;
-        margin-bottom: 4%;
+    .column-1 p {
+        font-size: 1em;
+        width: 100%;
     }
     .get-in-touch {
         font-size: 10px;
         padding: 10px 20px;
     }
-    .Aboutsection {
-        width: 57vh;
-        margin-left: -80px;
-        margin-top: 10%;
+    
+    /* ################################################################## */
+
+    .column-2{
+        width: 80%;
+        flex-direction: column;
     }
-    .Aboutsection h1 {
-        color: rgb(247, 189, 247);
-        margin-bottom: 40px;
+    .col-1 {
+        width: 100%;
     }
-    .Aboutsection p {
-        font-size: 14px;
-        line-height: 25px;
+    .col-2 {
+        width: 60%;
+        margin: 2em auto;
     }
-    .Aboutsection .languages {
-        display: block;
-        color: rgb(179, 6, 6);
-        line-height: 20px;
-        list-style-type: none;   
-    }
-    .Aboutsection .profile-pic{ 
-        width: 180px;
-        position: relative;
-        margin-left: 5px;
-    }
-    .footer{
+
+    /* ###################################################################### */
+    
+   .footer{
         width: 100%;
         color: whitesmoke;
         font-size: 10px; 
