--- a/responsive.css
+++ b/responsive.css
@@ -161,6 +161,35 @@
 
     /* ###################################################################### */
     
+    .column-3 {
+        width: 80%;
+        animation: 0.4s ease-in;
+    }
+    .col-3 {
+        width: 100%;
+    }
+    .col-3 img {
+        width: 100%;
+        opacity: 0.5;
+    }
+    .para {
+        position: absolute;
+        width: 80%;
+        background-color: rgba(80, 80, 94, 0.5);
+    }
+    .para p {
+        width: 80%;
+        color: violet;
+        background-color: rgba(80, 80, 94, 0.1);
+        box-shadow: none;    
+    }
+    .para img{
+        width: 20%;
+    }
+    .para h3 {
+        margin-bottom: 0;
+    }
+    
 }
 .nav-active {
     /* transform: translateX(0%); */
