--- a/responsive.css
+++ b/responsive.css
@@ -117,6 +117,10 @@
 	.burger {
         display: block;
         z-index: 2;
+        margin: 0 1em;
+    }
+    nav h1 {
+        margin: .8em 1em;
     }
     
     /* ############################################################## */
@@ -165,29 +169,35 @@
         width: 80%;
         animation: 0.4s ease-in;
     }
+    .section {
+        flex-direction: column-reverse;
+        width: 100%;
+    }
     .col-3 {
         width: 100%;
     }
     .col-3 img {
         width: 100%;
-        opacity: 0.5;
     }
     .para {
-        position: absolute;
-        width: 80%;
-        background-color: rgba(80, 80, 94, 0.5);
+        align-items: flex-start;
+        width: 100%;
     }
     .para p {
         width: 80%;
         color: violet;
         background-color: rgba(80, 80, 94, 0.1);
-        box-shadow: none;    
+        box-shadow: none;   
+        margin: 0;
     }
     .para img{
-        width: 20%;
+        width: 15%;
+        margin: 0;
+        float: left;
     }
     .para h3 {
         margin-bottom: 0;
+        margin: 0;
     }
     
 }
