--- a/css.css
+++ b/css.css
@@ -1,11 +1,15 @@
+
 body {
     font-size: 1.125rem;
     overflow-x: hidden;
-    background-color: #1d1b38;	/*#050a30*/
+    color: rgb(136, 146, 176);
+    -webkit-font-smoothing: antialiased;
+    line-height: 1.3;
+    background-color: rgb(10, 25, 47);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Varela', sans-serif;
+    font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
 }
 
 .container {
@@ -13,51 +17,70 @@ body {
     width: 100%;
     margin: 0 auto;
 }
-li{
-    list-style-type: none;
+h5 {
+    color: rgb(136, 146, 176);
+    font-weight: lighter;
+    font-size: 1.2rem;
+    line-height: 0.5;
+    /* animation: 2s ease-out 1s 1 animate; */
+}
+h1 {
+    color: rgb(204, 214, 246);
+    font-size: 4em;
+    margin: 0 0;
+    line-height: .5;
+    /* animation: 2s ease-out 2s animate; */
 }
 
-h1 {
-    color: rgb(166, 186, 206);
-    font-size: 4.5em;
-    line-height: .8em;
-    margin: 0 0;
-}
-h5 {
-    color: cyan;
-    font-size: 1.2rem;
-}
 h2 {
-    color: darkcyan;
-    font-size: 4rem;
-    line-height: .8em;
-    margin: .5em 0;
+    color: rgb(136, 146, 176);
+    font-size: 4.2rem;
+    line-height: 0.5;
+    /* animation: 2s ease-in-out animate; */
 }
 p {
     font-size: 1.1rem;
     max-width: 100%;
-    line-height: 1.8rem;
-    color: rgb(106, 124, 189);
+    line-height: 1.3;
+    /* animation: 2s ease-out 4s animate; */
 }
 nav {
     width: 100%;
+    height: 70px;
+    top: 0;
     display: flex;
-	justify-content: space-between;
-	align-items: center;
-    min-height: 0.8em;
+    position: fixed;
+    background-color: rgb(10, 25, 47);
+    z-index: 11;
+    box-shadow: rgba(2, 12, 27, 0.7) 0px 10px 30px -10px;
+	justify-content: space-evenly;
+    align-items: center;
 }
 nav h1 {
+    width: 45%;
     font-size: 1.8rem;
-    margin: 0 1em;
-    font-family: 'Moon 2.0', sans-serif;
+    font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
 }
 .nav-links {
 	display: flex;
-    justify-content: space-evenly;
-    width: 50%;
-    height: 2em;
-    color: whitesmoke;
-    font-family: 'Century Gothic', sans-serif;
+    justify-content: flex-end;
+    width: 45%;
+    height: 70px;
+    align-items: center;
+    transition: animate 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 1s;
+    font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
+}
+.nav-links li {
+    display: flex;
+    width: 80px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+}
+.nav-links a {
+	text-decoration: none;
+    font-size: .9rem; 
+    color: rgb(204, 214, 246);
 }
 
 .burger{
@@ -72,48 +95,58 @@ nav h1 {
 	margin: 5px; 
 	transition: all 0.3s ease;
 }
-.resume-btn {
-	padding: .5em;
+a.resume-btn {
+    padding: .8em 1.5em;
     border: 1px solid whitesmoke;
-    border-radius: .5em;
+    border-radius: .2em;
 }
 
-nav a {
-	text-decoration: none;
-    font-size: 1rem;
-    padding: .5em 1em;
-	letter-spacing: .1rem;
-	color: cyan;
-}
-nav a:hover{
-    background-color: rgb(17, 47, 80);   
-}
 /* Main content-1 
 #################################################################################
 */
 
 .column-1 {
     width: 80%;
-    margin: 1.5em auto;
+    margin: 7em 14.5em;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     line-height: .5em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transition: animate 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 0;
+        transform: translateY(10%);
+    }
+    50% {
+        opacity: 0.5;
+        transform: translateY(5%);
+        transition: 1s ease-out ;
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 .column-1 p {
     width: 50%;
+    max-width: 500px;
 }
 .get-in-touch {
-    border: .1em solid cyan;
-    font-size: .8rem;
-    padding: 1em 1.5em;
+    border: 1px solid cyan;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.25rem 1.75rem;
+    border-radius: 3px;
+    margin-top: 50px;
+    background-color: transparent;
+    font-size: 1rem;
     text-decoration: none;
     color: whitesmoke;
-}
-.get-in-touch:hover {
-    background-color: rgba(78, 76, 73, 0.144);
-    box-shadow: 1px 1px 6px black;
 }
 
 /* ################################################################################# */
@@ -123,11 +156,12 @@ nav a:hover{
 .column-2 {
     width: 70%;
     display: flex;
-    line-height: .5em;
+    line-height: 1.3;
     justify-content: space-between;
     align-items: flex-start;
     margin: 20em auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    animation: 1s ease-out 0.5s 1 animate;
 }
 
 .column-2 h1 {
@@ -142,7 +176,6 @@ nav a:hover{
     display: flex;
     flex-direction: column;
     width: 100%;
-    color: whitesmoke;
 }
 .col-1 li {
     padding: .6em;
@@ -158,7 +191,6 @@ nav a:hover{
 }
 .col-2 img:hover {
     opacity: 1;
-    box-shadow: .5em .5em 1.2em rgb(218, 97, 66);
     transition: all 0.2s ease-in;
 }
 
@@ -173,6 +205,7 @@ nav a:hover{
     align-items: flex-start;
     justify-content: space-between;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    animation: 1s ease-out 2s animate;
 }
 .achievement_tag {
     width: 100%;
@@ -180,7 +213,6 @@ nav a:hover{
 }
 .achievement_tag h3 {
     font-size: 2rem;
-    color: rgb(166, 186, 206);
 }
 
 .section {
@@ -228,13 +260,65 @@ nav a:hover{
     margin-right: 3em;
 }
 .para h3 {
-    color: darkgrey;
     font-size: 2em;
     margin-bottom: 1em;
     margin-right: 1em;
 }
+/* ######################################################################################### */
 
-
+.left-line {
+    height: 45%;
+    width: 5%;
+    left: 0;
+    display: flex;
+    bottom: 0;
+    position: fixed;
+    justify-content: space-between;
+    align-items: flex-start;
+    writing-mode: vertical-rl;
+    flex-direction: row-reverse;
+}
+.left-line hr {
+    width: .1%;
+    height: 35%;
+    margin-bottom: 0;
+}
+.left-social-icons {
+    display: flex;
+    width: 30%;
+    height: 55%;
+    justify-content: space-between;
+}
+.left-social-icons a {
+    color: rgb(204, 214, 246);
+    cursor: pointer;
+}
+.right-line {
+    height: 45%;
+    width: 5%;
+    right: 0;
+    float: right;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    writing-mode: vertical-rl;
+    flex-direction: row-reverse;
+}
+.right-line hr { 
+    width: .1%;
+    height: 35%;
+    margin-bottom: 0;
+}
+.right-line a{
+    display: flex;
+    width: 30%;
+    height: 50%;
+    color: inherit;
+    text-decoration: none;
+    font-size: 1rem;
+}
 /* ####################################################################################### */
 .footer{
     width: 100%;
@@ -254,93 +338,6 @@ nav a:hover{
 }
 .toggle .line3{
 	transform: rotate(45deg) translate(-5px,-6px);
-}
-
-.vertical-lines {
-    display: flex;
-    justify-content: space-between;
-}
-.row1{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-.vert-line1 {
-    width: 2px;
-    background-color: red;
-    height: 100px;
-}
-.row2 {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: flex-end;
-    margin-right: 50px;
-}
-.vert-line2 {
-    height: 120px;
-    width: 2px;
-    background-color: red;
-}
-.row2 a {
-    text-decoration: none;
-    color: darkcyan;
-    transition: all 0.3s ease;
-    font-size: 1vw;
-    writing-mode: vertical-lr;
-}
-/* 
-.vert-line1{
-    height: 100px;
-    background-color: rgb(174, 187, 245);
-    width: 2px;
-    position: fixed;
-    bottom: 0vw;
-    left: 4vw;
-    transform: translate(-50%, -50%);
-}
-.vert-line2{
-    height: 100px;
-    background-color: rgb(174, 187, 245);
-    width: 2px;
-    position: fixed;
-    bottom: 0vw;
-    right: 4vw;
-}
-.right-email{
-    height: 100px;
-    position: fixed;
-    bottom: 13vw;
-    right: 3.4vw;
-    transition: all 0.3s ease;
-}
-.right-email:hover{
-    bottom: 13.5vw;
-}
-
-.right-email a{
-
-}
-.right-email a:hover{
-    bottom: 13.5vw;
-    color: whitesmoke;
-} */
-.left-social-icons{
-    width: 1vw;
-    position: fixed;
-    bottom: 8vw;
-    left: 3.4vw;
-    line-height: 3vw;
-    
-}
-.left-social-icons a{
-    color: darkcyan;
-    font-size: 1.4vw;
-    padding-bottom: 0;
-    transition: all .4s ease;
-}
-.left-social-icons a:hover{
-    padding-bottom: 1vw;
-    color: whitesmoke;
 }
 
       
