--- a/responsive.css
+++ b/responsive.css
@@ -97,35 +97,38 @@
 @media screen and (max-width: 600px) {
 	.nav-links{
         position: absolute;
-        height: 100%;
+        height: 100vh;
+        top: 3em;
         right: 0;
-		top: -1em;
 		background-color: #4673ac; 		/*#1d1b38*/
 		display: flex;
 		flex-direction: column;
         align-items: center;
-        justify-content: space-evenly;
-		width: 100%;
+        justify-content: space-around;
+		width: 50%;
 		z-index: 1;
-        /* transform: translateX(100%); */
-        opacity: 0;
-		transition: opacity 0.5s ease-in;
-	}
+        transform: translateX(100%);
+        transition: 0.6s ease-out;
+    }
+    nav {
+        width: 100%;
+    }
 	.nav-links li {
-		opacity: 0;
+        opacity: 0;        
 	}
 	.burger {
         display: block;
         z-index: 2;
-        margin: 0 1em;
+        margin: 0 2em;
     }
     nav h1 {
-        margin: .8em 1em;
+        margin: 0em 1em;
     }
     
     /* ############################################################## */
 	.column-1 {
         width: 80%;
+        margin-left: 2em;
    		/* transform: translate(-40vw, -10vw);*/
     }
     .column-1 h1 {
@@ -170,7 +173,7 @@
         animation: 0.4s ease-in;
     }
     .section {
-        flex-direction: column-reverse;
+        flex-direction: column;
         width: 100%;
     }
     .col-3 {
@@ -199,12 +202,14 @@
         margin-bottom: 0;
         margin: 0;
     }
-    
+    .left-line,
+    .right-line {
+        display: none;
+    }
 }
 .nav-active {
-    /* transform: translateX(0%); */
+    transform: translateX(0%);
     opacity: 1;
-    position: fixed;
 }
 
 @keyframes navLinkFade{
@@ -214,6 +219,6 @@
 	}
 	to {
 		opacity: 1;
-		transform: translateX(10px);
+		transform: translateX(0px);
 	}
 }
