--- a/css.css
+++ b/css.css
@@ -3,7 +3,6 @@ body {
     font-size: 1.125rem;
     overflow-x: hidden;
     color: rgb(136, 146, 176);
-    -webkit-font-smoothing: antialiased;
     line-height: 1.3;
     background-color: rgb(10, 25, 47);
     margin: 0;
@@ -13,74 +12,140 @@ body {
 }
 
 .container {
-    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     width: 100%;
-    margin: 0 auto;
+}
+.content {
+    width: 70%;
+    min-height: 100vh;
+    padding-top: 120px;
+    counter-reset: section 0;
+    margin: 0px auto;
+}
+.column {
+    padding: 150px 0px;
 }
 h5 {
     color: rgb(136, 146, 176);
     font-weight: lighter;
     font-size: 1.2rem;
-    line-height: 0.5;
-    /* animation: 2s ease-out 1s 1 animate; */
-}
-h1 {
-    color: rgb(204, 214, 246);
-    font-size: 4em;
-    margin: 0 0;
-    line-height: .5;
-    /* animation: 2s ease-out 2s animate; */
+    line-height: 1;
 }
 
 h2 {
     color: rgb(136, 146, 176);
     font-size: 4.2rem;
-    line-height: 0.5;
-    /* animation: 2s ease-in-out animate; */
+    line-height: 1.1;
+    margin: 20px 0 10px;
 }
 p {
     font-size: 1.1rem;
     max-width: 100%;
     line-height: 1.3;
-    /* animation: 2s ease-out 4s animate; */
+    margin: 25px 0 15px;
 }
-nav {
-    width: 100%;
-    height: 70px;
-    top: 0;
+a {
+    display: inline-block;
+    text-decoration-skip-ink: auto;
+    color: inherit;
+    position: relative;
+    cursor: pointer;
+    text-decoration: none;
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+}
+
+/* ############################################################### */
+
+header {
     display: flex;
+    align-items: center;
     position: fixed;
+    top: 0px;
     background-color: rgb(10, 25, 47);
     z-index: 11;
+    width: 100%;
+    height: 100px;
     box-shadow: rgba(2, 12, 27, 0.7) 0px 10px 30px -10px;
-	justify-content: space-evenly;
-    align-items: center;
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 }
-nav h1 {
-    width: 45%;
-    font-size: 1.8rem;
-    font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    color: rgb(204, 214, 246);
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    counter-reset: item 0;
+    z-index: 12;
+    padding: 0 40px;
+    margin: 0;
+}
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+.logo a {
+    display: block;
+    color: rgb(100, 255, 218);
+    width: 100%;
+}
+.logo a h1 {
+    font-size: 1.5rem;
+    margin: 0;
 }
 .nav-links {
 	display: flex;
-    justify-content: flex-end;
-    width: 45%;
-    height: 70px;
     align-items: center;
-    transition: animate 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 1s;
-    font-family: Calibre, "San Francisco", "SF Pro Text", -apple-system, system-ui, BlinkMacSystemFont, Roboto, "Helvetica Neue", "Segoe UI", Arial, sans-serif;
 }
-.nav-links li {
+.links {
     display: flex;
-    width: 80px;
-    margin: auto;
-    justify-content: center;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
     align-items: center;
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+    flex-wrap: wrap;
 }
-.nav-links a {
-	text-decoration: none;
-    font-size: .9rem; 
-    color: rgb(204, 214, 246);
+.links li {
+    position: relative;
+    font-size: 13px;
+    counter-increment: item 1;
+    margin: 0px 10px;
+}
+.links li::before {
+    content: "0" counter(item) ".";
+    text-align: right;
+    color: rgb(100, 255, 218);
+    font-size: 12px;
+    box-sizing: inherit;
+}
+.links li a {
+    padding: 12px 10px;
+}
+.resume-btn {
+    display: block;
+    box-sizing: inherit;
+}
+.resume-btn a {
+    color: rgb(100, 255, 218);
+    background-color: transparent;
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    line-height: 1;
+    cursor: pointer;
+    margin-left: 10px;
+    font-size: 13px;
+    border: 1px solid rgb(100, 255, 218);;
+    border-radius: 3px;
+    padding: 0.75rem 1rem;
+    text-decoration: none;
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 }
 
 .burger{
@@ -95,23 +160,17 @@ nav h1 {
 	margin: 5px; 
 	transition: all 0.3s ease;
 }
-a.resume-btn {
-    padding: .8em 1.5em;
-    border: 1px solid whitesmoke;
-    border-radius: .2em;
-}
-
 /* Main content-1 
 #################################################################################
 */
 
 .column-1 {
-    width: 80%;
-    margin: 7em 14.5em;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     line-height: .5em;
+    padding-top: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     transition: animate 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 }
@@ -131,9 +190,19 @@ a.resume-btn {
         transform: translateY(0);
     }
 }
-.column-1 p {
-    width: 50%;
+.column-1 h1 {
+    color: rgb(204, 214, 246);
+    font-size: 4em;
+    margin: 0 0;
+    line-height: 1;
+}
+.column-1 div {
+    margin-top: 25px;
     max-width: 500px;
+}
+.column-1 div p {
+    margin: 0px 0px 15px;
+    box-sizing: inherit;
 }
 .get-in-touch {
     border: 1px solid cyan;
@@ -142,7 +211,7 @@ a.resume-btn {
     align-items: center;
     padding: 1.25rem 1.75rem;
     border-radius: 3px;
-    margin-top: 50px;
+    margin-top: 30px;
     background-color: transparent;
     font-size: 1rem;
     text-decoration: none;
@@ -154,43 +223,119 @@ a.resume-btn {
 /* About section */
 
 .column-2 {
-    width: 70%;
+    width: 100%;
     display: flex;
     line-height: 1.3;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 20em auto;
+    flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     animation: 1s ease-out 0.5s 1 animate;
 }
 
 .column-2 h1 {
-    font-size: 2rem;
-    margin-bottom: 2em;
+    position: relative;
+    display: flex;
+    color: rgb(204, 214, 246);
+    align-items: center;
+    width: 100%;
+    white-space: nowrap;
+    font-size: 32px;
+    margin: 10px 0px 40px;
+}
+.column-2 h1::before {
+    counter-increment: section 1;
+    content: "0" counter(section) ".";
+    margin-right: 10px;
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    font-weight: normal;
+    color: rgb(100, 255, 218);
+    font-size: 20px;
+    box-sizing: inherit;
+    position: relative;
+}
+.column-2 h1::after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 300px;
+    background-color: rgb(48, 60, 85);
+    position: relative;
+    margin-left: 20px;
+}
+.about-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.left {
+    width: 60%;
+    max-width: 480px;
+    box-sizing: inherit;
+    display: block;
 }
 
-.col-1 {
-    width: 50%;
+.left p {
+    margin: 0 0 15px;
+    display: block;
 }
-.col-1 ul{
-    display: flex;
-    flex-direction: column;
+.left ul{
+    display: grid;
+    grid-template-columns: repeat(2, minmax(140px, 250px));
+    overflow: hidden;
+    padding: 0px;
+    margin: 20px 0px 0px;
+    list-style: none;
+    box-sizing: inherit;
+}
+.left ul li {
+    position: relative;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    font-size: 13px;
+    color: rgb(136, 146, 176);
+}
+.left ul li::before {
+    content: "▹";
+    position: absolute;
+    left: 0px;
+    color: rgb(100, 255, 218);
+    font-size: 14px;
+    line-height: 12px;
+}
+.right {
+    width: 35%;
+    max-width: 480px;
+}
+.right a {
     width: 100%;
+    height: 100%;
 }
-.col-1 li {
-    padding: .6em;
-    list-style-image: url("https://img.icons8.com/material-rounded/24/000000/rhombus.png");
-}
-.col-2 {
-    width: 40%;
-    margin-top: 3em;
-}
-.col-2 img {
+.right a::before {
+    content: "";
+    border: 2px solid cyan;
     width: 100%;
-    opacity: 0.7;
+    height: 100%;
+    border-radius: 4px;
+    z-index: -1;
+    position: absolute;
+    display: block;
+    left: 15px;
+    top: 15px;
 }
-.col-2 img:hover {
-    opacity: 1;
+.right a:hover:before {
+    transition: all 0.3s ease-in;
+    transform: translate(-5px,-5px)
+}
+.right img {
+    width: 100%;
+    border-radius: 4px;
+    min-width: 80%;
+    filter: grayscale(100%);
+}
+.right img:hover {
+    filter: grayscale(0%);
     transition: all 0.2s ease-in;
 }
 
@@ -198,8 +343,7 @@ a.resume-btn {
 
 
 .column-3 {
-    width: 70%;
-    margin: 1em auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -220,6 +364,9 @@ a.resume-btn {
     margin: 1em auto;
     display: flex;
     align-items: center;
+    background-color: rgba(83, 19, 83, 0.418);
+    border-radius: 5px;
+    padding: 10px 10px;
     justify-content: space-between;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -267,57 +414,76 @@ a.resume-btn {
 /* ######################################################################################### */
 
 .left-line {
-    height: 45%;
-    width: 5%;
-    left: 0;
-    display: flex;
-    bottom: 0;
+    width: 40px;
     position: fixed;
-    justify-content: space-between;
-    align-items: flex-start;
-    writing-mode: vertical-rl;
-    flex-direction: row-reverse;
+    bottom: 0px;
+    left: 40px;
+    right: auto;
+    z-index: 10;
+    color: rgb(168, 178, 209);
 }
-.left-line hr {
-    width: .1%;
-    height: 35%;
-    margin-bottom: 0;
-}
-.left-social-icons {
+.left-line ul{
     display: flex;
-    width: 30%;
-    height: 55%;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    margin: 0;
+    list-style: none;
 }
-.left-social-icons a {
-    color: rgb(204, 214, 246);
+.left-line ul li:last-of-type {
+    margin-bottom: 20px;
+}
+.left-line a{
+    display: inline-block;
+    color: inherit;
+    position: relative;
     cursor: pointer;
+    padding: 10px;
+    text-decoration: none;
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+}
+.left-line ul::after {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 90px;
+    background-color: rgb(168, 178, 209);
+    margin: 0px auto;
+    box-sizing: inherit;
 }
 .right-line {
-    height: 45%;
-    width: 5%;
-    right: 0;
-    float: right;
+    width: 40px;
     position: fixed;
-    bottom: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    writing-mode: vertical-rl;
-    flex-direction: row-reverse;
+    bottom: 0px;
+    left: auto;
+    right: 40px;
+    z-index: 10;
+    color: rgb(168, 178, 209);
+    display: block;
 }
-.right-line hr { 
-    width: .1%;
-    height: 35%;
-    margin-bottom: 0;
+.right-line::after {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 90px;
+    background-color: rgb(168, 178, 209);
+    margin: 0px auto;
 }
 .right-line a{
-    display: flex;
-    width: 30%;
-    height: 50%;
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    font-size: 12px;
+    letter-spacing: 0.2em;
+    writing-mode: vertical-rl;
+    margin: 20px auto;
+    padding: 10px;
+    display: inline-block;
+    text-decoration-skip-ink: auto;
     color: inherit;
+    position: relative;
+    cursor: pointer;
     text-decoration: none;
-    font-size: 1rem;
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+    box-sizing: inherit;
 }
 /* ####################################################################################### */
 .footer{
