--- a/responsive.css
+++ b/responsive.css
@@ -1,121 +1,83 @@
-/* @media screen and (max-width: 768px) {
-	.nav-links{
-		width: 50%;
-		padding-right: 60px;
-    }
-    .main-content {
-    	width: 90vh;
-        left: 30px;
-        top: 40%;
-        line-height: 50px;
-   		transform: translate(8%, 25%);
-    }
-    .main-content h1 {
-        font-size: 55px;
-    }
-    .main-content span {
-        font-size: 14px;
-        
-    }
-    .main-content h2 {
-        font-size: 45px;
-    }
-    .main-content p {
-        font-size: 16px;
-        line-height: 25px;
-        margin-bottom: 4%;
-    }
-    .get-in-touch {
-        font-size: 10px;
-        padding: 10px 20px;
-    }
-    .Aboutsection {
-        width: 90vh;
-        margin-left: -90px;
-        margin-top: 10%;
-        top: 30%;
-        line-height: 50px;
-   		transform: translate(30%, 30%);
-    }
-    .Aboutsection h1 {
-        color: rgb(247, 189, 247);
-        margin-bottom: 40px;
-    }
-    .Aboutsection p {
-        font-size: 14px;
-        line-height: 25px;
-    }
-    .Aboutsection .languages {
-        display: block;
-        color: rgb(179, 6, 6);
-        line-height: 20px;
-        list-style-type: none;   
-    }
-    .Aboutsection .profile-pic{ 
-        width: 180px;
-        position: relative;
-        
-    }
-	
-}
-@media screen and (max-width: 1024px) {
-	.nav-links{
-		width: 40%;	
-    }
-    .main-content {
-    	width: 90vh;
-        left: 20px;
-        position: relative;
-        line-height: 50px;
-   		transform: translate(-40vw, -10vw);
-    }	
-    .Aboutsection {
-        width: 90vh;
-        margin-left: -100px;
-        margin-top: 10%;
-    }
-    .Aboutsection h1 {
-        color: rgb(247, 189, 247);
-        margin-bottom: 40px;
-    }
-    .Aboutsection p {
-        font-size: 15px;
-        line-height: 25px;
-    }
-    .Aboutsection .languages {
-        display: block;
-        color: rgb(179, 6, 6);
-        line-height: 20px;
-        list-style-type: none;   
-    }
-    .Aboutsection .profile-pic{ 
-        width: 180px;
-        position: relative;
-        
-    }
-} */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
 	.nav-links{
         position: absolute;
         height: 100vh;
-        top: 3em;
+        top: 3.7em;
         right: 0;
 		background-color: #4673ac; 		/*#1d1b38*/
 		display: flex;
 		flex-direction: column;
         align-items: center;
-        justify-content: space-around;
+        justify-content: flex-start;
 		width: 50%;
-		z-index: 1;
+        z-index: 1;
         transform: translateX(100%);
-        transition: 0.6s ease-out;
+        transition: 0.3s ease-out;
     }
     nav {
         width: 100%;
     }
-	.nav-links li {
-        opacity: 0;        
-	}
+    nav h1 {
+        margin: 0em 1em;
+    }
+    .nav-links .resume-btn {
+        margin-top: 30px;
+    }
+    .links {
+        display: flex;
+        width: 100%;
+        height: 60%;
+        padding: 20px;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+	.links li {
+        opacity: 0;       
+    }
+	.burger {
+        display: block;
+        z-index: 2;
+        margin: 0 2em;
+    }
+    .column-2{
+        width: 100%;
+        flex-direction: column;
+    }
+    .about-content {
+        width: 100%;
+        flex-direction: column;
+    }
+    .left {
+        width: 100%;
+    }
+    .right {
+        width: 60%;
+        margin: 60px auto 0px;
+        justify-content: space-between;
+    }
+
+}
+@media screen and (max-width: 600px) {
+	.nav-links{
+        position: absolute;
+        height: 100vh;
+        top: 3.6em;
+        right: 0;
+		background-color: #4673ac; 		/*#1d1b38*/
+		display: flex;
+		flex-direction: column;
+        align-items: center;
+        justify-content:flex-start;
+		width: 50%;
+        z-index: 1;
+        transform: translateX(100%);
+        transition: 0.3s ease-out;
+    }
+    .links {
+        height: 60%;
+        padding: 20px;
+    }
 	.burger {
         display: block;
         z-index: 2;
@@ -126,9 +88,12 @@
     }
     
     /* ############################################################## */
+    .content {
+        width: 90%;
+        margin: 0 auto;
+    }
 	.column-1 {
-        width: 80%;
-        margin-left: 2em;
+        width: 100%;
    		/* transform: translate(-40vw, -10vw);*/
     }
     .column-1 h1 {
@@ -148,28 +113,21 @@
         width: 100%;
     }
     .get-in-touch {
-        font-size: 10px;
-        padding: 10px 20px;
+        font-size: 14px;
+        padding: 15px 25px;
     }
     
     /* ################################################################## */
 
     .column-2{
-        width: 80%;
-        flex-direction: column;
-    }
-    .col-1 {
         width: 100%;
-    }
-    .col-2 {
-        width: 60%;
-        margin: 2em auto;
+        flex-direction: column;
     }
 
     /* ###################################################################### */
     
     .column-3 {
-        width: 80%;
+        width: 100%;
         animation: 0.4s ease-in;
     }
     .section {
