--- a/css.css
+++ b/css.css
@@ -53,7 +53,6 @@ a {
     position: relative;
     cursor: pointer;
     text-decoration: none;
-    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 }
 
 /* ############################################################### */
@@ -66,9 +65,8 @@ header {
     background-color: rgb(10, 25, 47);
     z-index: 11;
     width: 100%;
-    height: 100px;
+    height: 80px;
     box-shadow: rgba(2, 12, 27, 0.7) 0px 10px 30px -10px;
-    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 }
 nav {
     display: flex;
@@ -97,6 +95,7 @@ nav {
 .logo a h1 {
     font-size: 1.5rem;
     margin: 0;
+    font-family: 'Open sans',Arial, Helvetica, sans-serif;
 }
 .nav-links {
 	display: flex;
@@ -145,7 +144,6 @@ nav {
     border-radius: 3px;
     padding: 0.75rem 1rem;
     text-decoration: none;
-    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 }
 
 .burger{
@@ -172,23 +170,6 @@ nav {
     line-height: .5em;
     padding-top: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    transition: animate 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
-}
-
-@keyframes animate {
-    0% {
-        opacity: 0;
-        transform: translateY(10%);
-    }
-    50% {
-        opacity: 0.5;
-        transform: translateY(5%);
-        transition: 1s ease-out ;
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
 }
 .column-1 h1 {
     color: rgb(204, 214, 246);
@@ -230,9 +211,7 @@ nav {
     align-items: flex-start;
     flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    animation: 1s ease-out 0.5s 1 animate;
 }
-
 .column-2 h1 {
     position: relative;
     display: flex;
@@ -240,7 +219,7 @@ nav {
     align-items: center;
     width: 100%;
     white-space: nowrap;
-    font-size: 32px;
+    font-size: 30px;
     margin: 10px 0px 40px;
 }
 .column-2 h1::before {
@@ -250,7 +229,8 @@ nav {
     font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
     font-weight: normal;
     color: rgb(100, 255, 218);
-    font-size: 20px;
+    font-size: 30px;
+    margin-top: 6px;
     box-sizing: inherit;
     position: relative;
 }
@@ -346,70 +326,83 @@ nav {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
     justify-content: space-between;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    animation: 1s ease-out 2s animate;
-}
-.achievement_tag {
-    width: 100%;
-    display: flex;
-}
-.achievement_tag h3 {
-    font-size: 2rem;
 }
 
+.column-3 .achieve-head {
+    position: relative;
+    display: flex;
+    color: rgb(204, 214, 246);
+    align-items: center;
+    width: 100%;
+    white-space: nowrap;
+    font-size: 30px;
+    margin: 10px 0px 40px;
+}
+.column-3 .achieve-head::before{
+    counter-increment: section 1;
+    content: "0" counter(section) ".";
+    margin-right: 10px;
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+    font-weight: normal;
+    color: rgb(100, 255, 218);
+    font-size: 30px;
+    margin-top: 6px;
+    box-sizing: inherit;
+    position: relative;
+}
+.column-3 .achieve-head::after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 300px;
+    background-color: rgb(48, 60, 85);
+    position: relative;
+    margin-left: 20px;
+}
 .section {
     width: 100%;
-    margin: 1em auto;
     display: flex;
-    align-items: center;
-    background-color: rgba(83, 19, 83, 0.418);
-    border-radius: 5px;
-    padding: 10px 10px;
+    align-items: flex-start;
+    /* background-color: rgba(83, 19, 83, 0.418); */
     justify-content: space-between;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.col-3 {
-    width: 50%;
+.section .left {
+    width: 450px;
+    overflow: hidden;
 }
-.col-3 img{
+.section .left img{
     width: 100%;
+    transition: all 0.5s ease;
     opacity: 0.8;
-    filter: grayscale(100%);
-    transition: .5s ease-in-out;
+    filter: grayscale(100%) ;
+    box-shadow: black 0 10px 20px -10px;
 }
-.col-3 img:hover{
+.section .left img:hover{
     opacity: 1;
-    filter: grayscale(0%);
-    transition: all 0.3s ease-in;
+    transform: scale(1.1);
+    filter: grayscale(10%);
 }
 
-.para {
-    width: 45%;
+.section .right {
+    width: 600px;
     display: flex;
-    position: relative;
-    align-items: flex-end;
+    /* border: 2px solid yellow; */
+    align-items: flex-start;
     justify-content: space-between;
     flex-direction: column;
 }
-.para p{
+.section .right p{
     width: 100%;
-    background-color: #1d1b38;
-    box-shadow: .5px 0px 20px black;
-    padding: 1em 2em;
-    z-index: 4;
+    margin-top: 0;
 }
-.para img {
-    float: right;
-    width: 20%;
-    margin-top: 5em;
-    margin-right: 3em;
-}
-.para h3 {
-    font-size: 2em;
-    margin-bottom: 1em;
-    margin-right: 1em;
+.section .right h3{
+    font-size: 30px;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 /* ######################################################################################### */
 
@@ -441,6 +434,10 @@ nav {
     padding: 10px;
     text-decoration: none;
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+}
+.left-line a:hover{
+    transform: translateY(-5px);
+    color: cyan;
 }
 .left-line ul::after {
     content: "";
@@ -484,6 +481,10 @@ nav {
     text-decoration: none;
     transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
     box-sizing: inherit;
+}
+.right-line a:hover{
+    transform: translateY(-5px);
+    color: cyan;
 }
 /* ####################################################################################### */
 .footer{
