--- a/responsive.css
+++ b/responsive.css
@@ -17,9 +17,6 @@
     nav {
         width: 100%;
     }
-    nav h1 {
-        margin: 0em 1em;
-    }
     .nav-links .resume-btn {
         margin-top: 30px;
     }
@@ -38,7 +35,7 @@
 	.burger {
         display: block;
         z-index: 2;
-        margin: 0 2em;
+        margin: 0;
     }
     .column-2{
         width: 100%;
@@ -47,13 +44,26 @@
     .about-content {
         width: 100%;
         flex-direction: column;
+        align-items: center;
     }
-    .left {
+    .about-content .left{
         width: 100%;
     }
-    .right {
-        width: 60%;
-        margin: 60px auto 0px;
+    .about-content .right{
+        width: 50%;
+        margin-top: 20px;
+    }
+    .section {
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-direction: column;
+        /* border: 2px solid yellow */
+    }
+    .section .left {
+        width: 100%;
+    }
+    .section .right {
+        width: 100%;
         justify-content: space-between;
     }
 
@@ -81,12 +91,8 @@
 	.burger {
         display: block;
         z-index: 2;
-        margin: 0 2em;
+        margin: 0;
     }
-    nav h1 {
-        margin: 0em 1em;
-    }
-    
     /* ############################################################## */
     .content {
         width: 90%;
@@ -134,31 +140,11 @@
         flex-direction: column;
         width: 100%;
     }
-    .col-3 {
+    .section .left {
         width: 100%;
     }
-    .col-3 img {
+    .section .right{
         width: 100%;
-    }
-    .para {
-        align-items: flex-start;
-        width: 100%;
-    }
-    .para p {
-        width: 80%;
-        color: violet;
-        background-color: rgba(80, 80, 94, 0.1);
-        box-shadow: none;   
-        margin: 0;
-    }
-    .para img{
-        width: 15%;
-        margin: 0;
-        float: left;
-    }
-    .para h3 {
-        margin-bottom: 0;
-        margin: 0;
     }
     .left-line,
     .right-line {
