--- a/responsive.css
+++ b/responsive.css
@@ -53,20 +53,11 @@
         width: 50%;
         margin-top: 20px;
     }
-    .section {
-        justify-content: space-between;
-        align-items: flex-start;
-        flex-direction: column;
-        /* border: 2px solid yellow */
+    .certificates {
+        width: 85%;
+        margin: 0 auto;
+        border: 1px solid red;
     }
-    .section .left {
-        width: 100%;
-    }
-    .section .right {
-        width: 100%;
-        justify-content: space-between;
-    }
-
 }
 @media screen and (max-width: 600px) {
 	.nav-links{
@@ -136,15 +127,18 @@
         width: 100%;
         animation: 0.4s ease-in;
     }
-    .section {
-        flex-direction: column;
-        width: 100%;
+    .certificates {
+        width: 95%;
+        margin: 0 auto;
+        border: 1px solid red;
     }
-    .section .left {
-        width: 100%;
+    .box {
+        width: 300px;
+        height: 250px;
+        min-width: 360px;
     }
-    .section .right{
-        width: 100%;
+    .inner span {
+        margin-left: 321px;
     }
     .left-line,
     .right-line {
