--- a/responsive.css
+++ b/responsive.css
@@ -53,10 +53,21 @@
         width: 50%;
         margin-top: 20px;
     }
-    .certificates {
+    .certificates-box {
         width: 85%;
         margin: 0 auto;
-        border: 1px solid red;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .project-box{
+        width: 85%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
 @media screen and (max-width: 600px) {
@@ -128,17 +139,37 @@
         animation: 0.4s ease-in;
     }
     .certificates {
-        width: 95%;
+        width: 100%;
         margin: 0 auto;
-        border: 1px solid red;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     .box {
-        width: 300px;
-        height: 250px;
-        min-width: 360px;
+        width: 100%;
+        /* height: 250px; */
+        min-width: 300px;
+        background-color: rgba(10, 25, 47,0.2);
+    }
+    .inner{
+        clip-path: none;
+        background-color: rgb(10, 25, 47);
+    }
+    .inner h1 {
+        color: white;
+    }
+    .inner p{
+        color: white;
+        font-size: 15px;
     }
     .inner span {
-        margin-left: 321px;
+        display: none;
+    }
+    .project-box{
+        flex-direction: column;
+        width: 100%;
+        min-width: 300px;
     }
     .left-line,
     .right-line {
