--- a/css.css
+++ b/css.css
@@ -1,10 +1,12 @@
-
 body {
+
     font-size: 1.125rem;
     overflow-x: hidden;
     color: rgb(136, 146, 176);
     line-height: 1.3;
-    background-color: rgb(10, 25, 47);
+    background-color: rgb(10, 25, 47);   
+    background-size: cover;
+    background-position: center;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
