--- a/css.css
+++ b/css.css
@@ -391,7 +391,9 @@ nav {
     width: 100%;
     height: 100%;
     top: 0;
-    opacity: 0.2;
+    opacity: 0.3;
+    transform: translateX(0%);
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
 }
 .box:before{
     content: "";
@@ -401,15 +403,18 @@ nav {
     height: 100%;
     top: 0;
     opacity: 0.3;
+    transform: translateX(0%);
     transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
 }
 .box:hover:after{
     opacity: 0;
-    transition: all cubic-bezier(0.77, 0, 0.175, 1) 0.6s;
+    transform: translateX(-100%);
+    transition: all cubic-bezier(0.77, 0, 0.175, 1) 1s;
 }
 .box:hover:before{
     opacity: 0;
-    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.4s;
+    transform: translateX(-100%);
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.8s;
 }
 .box:hover{
     transform: translateY(-8px);
@@ -501,8 +506,8 @@ nav {
 .master-project-box {
     overflow: hidden;
     position: relative;
-    width: 350px;
-    height: 230px;
+    width: 320px;
+    height: 200px;
     border-radius: 3px;
 }
 
