--- a/css.css
+++ b/css.css
@@ -117,7 +117,6 @@ nav {
     padding: 0px;
     margin: 0px;
     list-style: none;
-    flex-wrap: wrap;
 }
 .links li {
     position: relative;
@@ -235,7 +234,7 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1.25rem 1.75rem;
+    padding: 15px 25px;
     border-radius: 3px;
     margin-top: 30px;
     background-color: transparent;
@@ -243,7 +242,6 @@ nav {
     text-decoration: none;
     color: whitesmoke;
     transition: all 0.5s;
-
 }
 
 .get-in-touch:hover{
@@ -373,11 +371,11 @@ nav {
     float: left;
     position: relative;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    height: 510px;
+    height: 470px;
 }
 
 #showElements{
@@ -416,8 +414,8 @@ nav {
     background-color: rgb(18, 39, 71);
 }
 .box{
-    width: 340px;
-    height: 240px;
+    width: 320px;
+    height: 220px;
     float: left;
     border-radius: 5px;
     opacity: 1;
@@ -472,8 +470,8 @@ nav {
 }
 .box:nth-child(1) {
     background: url(./img/Epam.jpg);
-    width: 340px;
-    height: 494px;
+    width: 320px;
+    height: 454px;
     background-size: cover;
     background-position: center;
 }
