changed font family of footer

--- a/css.css
+++ b/css.css
@@ -169,7 +169,6 @@ nav {
 	margin: 5px; 
 	transition: all 0.3s ease;
 }
-
 .Section-heading {
     position: relative;
     display: flex;
@@ -644,7 +643,7 @@ nav {
     width: 100%;
     font-size: 12px; 
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Quicksand', sans-serif;
 }
 .footer span{
     color: red;
