--- a/responsive.css
+++ b/responsive.css
@@ -13,7 +13,7 @@
 @media (min-width: 601px) and (max-width: 815px) {
   .nav-links {
     position: absolute;
-    height: 280px;
+    height: 250px;
     top: 55.5px;
     border-radius: 4px;
     right: 0;
@@ -22,7 +22,7 @@
     flex-direction: column;
     align-items: flex-start;
     flex-wrap: nowrap;
-    width: 240px;
+    width: 200px;
     z-index: 1;
     transform: translateX(100%);
   }
@@ -106,7 +106,7 @@
 @media screen and (max-width: 600px) {
   .nav-links {
     position: absolute;
-    height: 280px;
+    height: 250px;
     top: 55.5px;
     border-radius: 4px;
     right: 0;
@@ -115,19 +115,20 @@
     flex-direction: column;
     align-items: flex-start;
     flex-wrap: nowrap;
-    width: 240px;
+    width: 200px;
     z-index: 1;
     transform: translateX(100%);
   }
   .links {
     padding: 10px;
     display: flex;
-    align-items: baseline;
+    align-items: flex-start;
+    flex-direction: column;
     border-bottom: #2d286e;
   }
   .resume-btn {
     padding: 10px;
-    display: block;
+    display: inline-block;
   }
   .burger {
     display: block;
@@ -201,7 +202,6 @@
   .box {
     width: 100%;
     min-width: 320px;
-    max-width: 340px;
     background-color: rgba(10, 25, 47, 0.2);
   }
   .contact-grid ul {
